Update SJUI 1.28.0 to 1.28.2
Signed-off-by: LazyKnight <i@lazyknight.com>

--- a/core/source/ui/base/TriggerData/TriggerActions/TODO.txt
+++ b/core/source/ui/base/TriggerData/TriggerActions/TODO.txt
@@ -2,6 +2,27 @@
 	DamageSystemInitialization=0,abilcode,abilcode,abilcode,buffcode,buffcode
 		_DamageSystemInitialization_Defaults=_,_,_,_,_
 		_DamageSystemInitialization_Category=TC_UDDS
+	InitMultiboardSystem=0,boolean
+		_InitMultiboardSystem_Defaults=true
+		_InitMultiboardSystem_Category=TC_UDDS
+	SetUnitPredicableMultiboardItem=0,unit
+		_SetUnitPredicableMultiboardItem_Defaults=GetTriggerUnit
+		_SetUnitPredicableMultiboardItem_Category=TC_UDDS
+	SetItemPredicableMultiboardItem=0,unit
+		_SetItemPredicableMultiboardItem_Defaults=GetTriggerUnit
+		_SetItemPredicableMultiboardItem_Category=TC_UDDS
+	SetItemPredicableMultiboardItemBuyItem=0,integer,item
+		_SetItemPredicableMultiboardItemBuyItem_Defaults=1,UnitItemInSlotBJ
+		_SetItemPredicableMultiboardItemBuyItem_Limits=1,7,_,_
+		_SetItemPredicableMultiboardItemBuyItem_Category=TC_UDDS
+	DisplayItemPredicableMultiboard=0,integer,boolean
+		_DisplayItemPredicableMultiboard_Defaults=0,true
+		_DisplayItemPredicableMultiboard_Limits=0,12,_,_
+		_DisplayItemPredicableMultiboard_Category=TC_UDDS
+	DisplayUnitPredicableMultiboard=0,integer,boolean
+		_DisplayUnitPredicableMultiboard_Defaults=0,true
+		_DisplayUnitPredicableMultiboard_Limits=0,12,_,_
+		_DisplayUnitPredicableMultiboard_Category=TC_UDDS
 	SetHealingThumpAllow=0,boolean
 		_SetHealingThumpAllow_Defaults=true
 		_SetHealingThumpAllow_Category=TC_UDDS
